# drivers_helper

./: .cz-config.js  .gitignore  GUN_dataset_fiftyone_YOLOv5_dataset_convert.py  OVino_inf_class.py  README.md  RSTD_val.xlsx  RSTD_val_filtered.xlsx  RTSD_arhive_unzip.py  RTSD_dataset_COCO_to_CVAT_convert.py  RTSD_dataset_CVAT_filter_by_labels.py  RTSD_dataset_CVAT_to_YOLOv5_convert.py  RTSD_dataset_fiftyone_YOLOv5_dataset_convert.py  convert_labels_to_CVAT_json.py  create_correct_labels.py  create_labels_for_CVAT_json.py  crop_bboxes_with_class_sample.py  data_utils.py  images_folder_arhivier.py  include_classes.txt  massages_for_signs.json  pyproject.toml  yolov8_train.py
models/messages/: messages_for_signs.json
notebooks/: yolov8s_detect_export.ipynb
reports/: RSTD_train.xlsx  report_coco_yolos_640.csv  report_coco_yolov8s_640.csv  report_rtsd_yolos.csv
src/data/: RTSD_arhive_unzip.py  RTSD_dataset_COCO_to_CVAT_convert.py  RTSD_dataset_CVAT_filter_by_labels.py  RTSD_dataset_CVAT_to_YOLOv5_convert.py  convert_labels_to_CVAT_json.py  create_correct_labels.py  create_labels_for_CVAT_json.py  data_utils.py  images_folder_arhivier.py  model_arhivier.py
src/eval_models/: eval_yolos_on_coco.py  eval_yolos_on_rtsd.py  eval_yolov8s_on_coco.py  evaluate_models.py
src/models/: OVino_inf_class.py  YOLOv8_Detector_Inference.py  create_massages_json.py  model_arhivier.py  yolov8_train.py
src/visualization/: crop_bboxes_with_class_sample.py  visualize_classes_samples.py
