[tool.poetry]
name = "drivers-helper"
version = "0.0.1"
description = ""
authors = ["Anton Shiryaev <med.phisiker@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "1.13.0"
torchvision = "0.14.0"
ultralytics = "^8.0.209"
numpy = "^1.26.2"
boto3 = "^1.26.142"
fiftyone = "^0.22.3"
pyyaml = "^6.0.1"
cvat-cli = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
